[gd_scene load_steps=6 format=3 uid="uid://do70wbchjhhuj"]

[ext_resource type="Script" uid="uid://c4qdmfdanucv7" path="res://Scenes/pause.gd" id="1_e0jm0"]
[ext_resource type="FontFile" uid="uid://10m5ajyiwqq" path="res://Fonts/RUSSOONE-REGULAR.TTF" id="1_o80xk"]
[ext_resource type="Texture2D" uid="uid://cq3pxcq36jnjh" path="res://background/sprite_sheet_transparent.png" id="3_e0jm0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_j2dne"]
atlas = ExtResource("3_e0jm0")
region = Rect2(0, 0, 154, 154)

[sub_resource type="SpriteFrames" id="SpriteFrames_3fojq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2dne")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Pause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e0jm0")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 1.00006
offset_top = -1.99994
offset_right = 1155.0
offset_bottom = 652.0
color = Color(0, 0, 0, 0.533333)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1154.0
offset_bottom = 652.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -48

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_o80xk")
theme_override_font_sizes/font_size = 32
text = "Pause"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RESUME" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_fonts/font = ExtResource("1_o80xk")
theme_override_font_sizes/font_size = 20
text = "RESUME"

[node name="HSlider2" type="HSlider" parent="."]
layout_mode = 0
offset_left = 630.0
offset_top = 308.0
offset_right = 896.0
offset_bottom = 374.0
min_value = 0.1
max_value = 1.0
step = 0.05
value = 0.1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 266.0
offset_top = 323.0
offset_right = 399.0
offset_bottom = 360.0
theme_override_fonts/font = ExtResource("1_o80xk")
theme_override_font_sizes/font_size = 30
text = "Ball Size"

[node name="PreviewBall2" type="CharacterBody2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="PreviewBall2"]
position = Vector2(550, 524)
scale = Vector2(0.448052, 0.448052)
sprite_frames = SubResource("SpriteFrames_3fojq")

[connection signal="pressed" from="MarginContainer/VBoxContainer/RESUME" to="." method="_on_resume_pressed"]
[connection signal="value_changed" from="HSlider2" to="." method="_on_h_slider_2_value_changed"]
